--- a/Artzy - Web/css/style-cadastro.css
+++ b/Artzy - Web/css/style-cadastro.css
@@ -1,3 +1,36 @@
+@font-face {
+    font-family: KGRedHands ;
+    src: url(../src//font/kg_red_hands/KGRedHands.ttf);
+}
+@font-face {
+    font-family: HeyComic ;
+    src: url(../src//font/hey_comic/Hey\ Comic.ttf);
+}
+@font-face {
+    font-family: SuperFoods ;
+    src: url(../src//font/super_foods/Super\ Foods.ttf);
+}
+@font-face {
+    font-family: Papernotes ;
+    src: url(../src//font/papernotes/Papernotes.ttf);
+}
+@font-face {
+    font-family: SquashyFlow ;
+    src: url(../src//font/squashy_flow/Squashy\ Flow.ttf);
+}
+@font-face {
+    font-family: Minecraft ;
+    src: url(../src//font/minecraft/Minecraft.ttf);
+}
+@font-face {
+    font-family: PinkChicken;
+    src: url(../src//font/pink_chicken/PinkChicken-Regular.ttf);
+}
+
+*{
+    list-style: none;
+}
+
 body{
     background-color: #E1EEF5 ;
 }
@@ -27,9 +60,330 @@ body{
     border: solid 5px #000;
     background-image: url("../src/sdasds.png");
     background-position: center;
-    background-size:150%;
+    background-size: 265% 101%;
     background-repeat: no-repeat ;
     position: absolute;
+}
+
+.cad-fund{
+    width: 601px;
+    height: 605px;
+    margin-left: 34rem;
+    margin-top: 3rem;
+    position: relative;
+}
+.cad_p {
+    margin: 60px 96.2px 54px -15px;
+    -webkit-text-stroke: 10px #000;
+    font-family: SquashyFlow;
+    font-size: 54px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 1.6px;
+    text-align: left;
+    paint-order:stroke  fill ;
+    text-shadow: -7px 7px 0px rgba(57, 72, 109, 1);
+    color: #6188c1;
+}
+.selecione-none {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none; 
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
+}
+
+.linha1{
+    position: relative;
+    left: -1.5rem;
+}
+.linha2{
+    position: relative;
+    left: -1.5rem;
+    top: 6rem;
+}
+
+.nome{
+    width: 317.8px;
+    height: 63px;
+    padding: 24px 31.8px 23px 31.8px;
+    border-radius: 28px;
+    border: solid 5px #000;
+    background-color: #fff;
+    box-shadow: -10px 8px 0 0 rgba(57, 72, 109, 1);
+    outline: none;
+    font-family: PinkChicken;
+    font-size: 18px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.72px;
+    text-align: left;
+    color: rgb(0, 0, 0);
+    position: absolute;
+    top: 0rem;
+}
+.user{
+    width: 317.8px;
+    height: 63px;
+    padding: 24px 31.8px 23px 31.8px;
+    border-radius: 28px;
+    border: solid 5px #000;
+    background-color: #fff;
+    box-shadow: -10px 8px 0 0 rgba(57, 72, 109, 1);
+    outline: none;
+    font-family: PinkChicken;
+    font-size: 18px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.72px;
+    text-align: left;
+    color: rgb(0, 0, 0);
+    position: absolute;
+    left: 21.3rem;
+}
+.senha{
+    width: 317.8px;
+    height: 63px;
+    padding: 24px 31.8px 23px 31.8px;
+    border-radius: 28px;
+    border: solid 5px #000;
+    background-color: #fff;
+    box-shadow: -10px 8px 0 0 rgba(57, 72, 109, 1);
+    outline: none;
+    font-family: PinkChicken;
+    font-size: 18px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.72px;
+    text-align: left;
+    color: rgb(0, 0, 0);
+    position: absolute;
+}
+.area{
+    width: 317.8px;
+    height: 63px;
+    padding: 14px 31.8px 13px 31.8px;
+    border-radius: 28px;
+    border: solid 5px #000;
+    font-family: PinkChicken;
+    font-size: 18px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.72px;
+    text-align: left;
+    color: rgba(0, 0, 0, 0.527);
+    background-color: #fff;
+    box-shadow: -10px 8px 0 0 rgba(57, 72, 109, 1);
+    outline: none;
+    position: absolute;
+    left: 21.3rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.area option{
+    font-family: PinkChicken;
+    font-size: 18px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.72px;
+    text-align: left;
+    color: rgb(0, 0, 0);
+}
+#seta{
+    font-size: 25pt;
+    position: absolute;
+    top: 0.68rem;
+    left: 16rem;
+    color: rgb(0, 0, 0);
+    
+}
+
+.olho{
+    font-size: 17pt;
+    position: absolute;
+    top: 1.4rem;
+    left: 17rem;
+    cursor: pointer;
+}
+
+#olho2{
+    display: none;
+}
+.arrow-rotated {
+    transform: rotate(180deg);
+    transform-origin: 50% 37%;
+    transition: transform 0.3s ease-in-out; 
+}
+
+.arrow-initial {
+    transform: rotate(0deg);
+    transform-origin: 50% 37%;
+    transition: transform 0.3s ease-in-out; 
+}
+
+.dp {
+    width: 264px;
+    height: 0px;
+    left: 2.8rem;
+    bottom: -3.96rem;
+    padding: 15px 12px 0px; 
+    box-shadow: -13px 6px 0 0 #39486d;
+    border-left: 5px solid #000;
+    border-right: 5px solid #000;
+    border-bottom: 5px solid #000;
+    border-radius: 0rem 0rem 25px 25px;
+    background-color: #e5f3ff;
+    position: relative;
+    visibility: hidden;
+    overflow: hidden; 
+    z-index: 2;
+    transition: height 0.3s ease, padding-bottom 0.3s ease; 
+}
+
+.dp.show {
+    visibility: visible;
+    height: 166px; 
+    padding-bottom: 232px; 
+}
+
+.dp.hide {
+    height: 0px; 
+    padding-bottom: 0px; 
+}
+.scrollbar {
+    overflow-y: scroll;
+    right: 20px; 
+
+}
+
+.scrollbar::-webkit-scrollbar {
+    width: 19px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+    background-color: #3547758a; 
+    border: 0.28em solid #e5f3ff; 
+    border-radius: 2rem; 
+}
+
+.scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #2a38588a; 
+}
+
+.scrollbar::-webkit-scrollbar-track{
+    border-radius: 3rem;
+    margin-top: 0.9rem;
+    margin-bottom: 0.6rem;
+}
+.dp-item{
+    font-family: Minecraft;
+    font-size: 12pt;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.6px;
+    text-align: left;
+    color: #000;
+    
+}
+.dp-menu{
+    width: 100%;
+    position: relative;
+    top: -0.5rem;
+}
+.hov {
+    width: 203px;
+    height: 32px;
+    padding: 22px 16px 31px 18px;
+    border-radius: 14px;
+    border: solid 0 #000;
+    position: absolute;
+    margin-left:  -1.5rem;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    
+}
+
+#ta{
+    top: 4rem;
+    padding-right: 1rem;
+}
+#av{
+    top:8rem;
+}
+#wr{
+    top:11.98rem;
+}
+
+#ddp div:hover{
+
+    background-color: hsl(222, 58%, 87%);
+    box-shadow: 0 5px 0 0 #39486d;
+    transform: translateX(5px);
+
+}
+
+.tos{
+    width: 476px;
+    left: 2rem;
+    top: 12.2rem;
+    position: relative;
+}
+
+.check{
+    position: absolute;
+    text-shadow: -2px 2px 0px rgb(28, 38, 63);
+    font-size: 12pt;
+    left: 0.25rem;
+    bottom: -1.16rem;
+    color:#ffffff;
+    cursor: pointer;
+}
+.check_b{
+    text-shadow: -2px 2px 0px rgb(28, 38, 63);
+    font-size: 18pt;
+    color:#697bbd;
+    position: absolute;
+    cursor: pointer;
+}
+#tos span{
+    position: absolute;
+    left: 2.5rem;
+    top: 0.26rem;
+    font-family: HeyComic;
+    font-size: 12pt;
+    letter-spacing: 0.48px;
+    text-align: left;
+    color: #697bbd;
+    margin-bottom: 1rem;
+}
+#tos a{
+    text-decoration-thickness: 2.3px;
+    text-underline-offset: 2px;
+    color: #39486d;
+}
+
+
+#on{
+    display: none;
+}
+#ok{
+    display: none;
 }
 
 
