--- a/Artzy - Web/css/style-cadastro.css
+++ b/Artzy - Web/css/style-cadastro.css
@@ -40,7 +40,7 @@ body{
     width: 1241px;
     height: 838px;
     flex-grow: 0;
-    margin: 70px auto;
+    margin: 68px auto;
     padding: 61px 41.19999999999999px 61px 32px;
     border-radius: 41px;
     border: solid 5px #000;
@@ -105,7 +105,55 @@ body{
     left: -1.5rem;
     top: 6rem;
 }
+.log-men{
+    width: 452px;
+    height: 241px;
+    flex-grow: 0;
+    margin: 221px 47px 236px 5px;
+    padding: 43px 101px 46px;
+    border-radius: 43px;
+    -webkit-backdrop-filter: blur(28.8px);
+    backdrop-filter: blur(28.8px);
+    box-shadow: -7px 11px 0 0 #1d2c56;
+}
+.p-log{
+    width: 250px;
+    height: 83px;
+    flex-grow: 0;
+    margin: 0 0 22px;
+    font-family: SquashyFlow;
+    font-size: 22px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.88px;
+    text-align: left;
+    color: #ffffff;
+    text-shadow: -4px 2px 0px rgb(102, 125, 190);
 
+}
+.btn-log{
+    width: 188px;
+    height: 47.1px;
+    flex-grow: 0;
+    margin: 22px 15px 0 25px;
+    padding: 13px 65px 10px;
+    border-radius: 40px;
+    background-color: #5079b6;
+    outline: none;
+    border: none;
+    font-family: KGRedHands;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.56px;
+    text-align: left;
+    color: rgba(255, 255, 255, 0.85);
+    box-shadow: -7px 11px 0 0 #1d2c56;
+}
 .nome{
     width: 317.8px;
     height: 63px;
@@ -127,7 +175,7 @@ body{
     position: absolute;
     top: 0rem;
 }
-.user{
+.email{
     width: 317.8px;
     height: 63px;
     padding: 24px 31.8px 23px 31.8px;
@@ -350,7 +398,7 @@ body{
     text-shadow: -2px 2px 0px rgb(28, 38, 63);
     font-size: 12pt;
     left: 0.25rem;
-    bottom: -1.16rem;
+    bottom: -1.25rem;
     color:#ffffff;
     cursor: pointer;
 }
@@ -363,8 +411,8 @@ body{
 }
 #tos span{
     position: absolute;
-    left: 2.5rem;
-    top: 0.26rem;
+    left: 1.8rem;
+    top: 0.090rem;
     font-family: HeyComic;
     font-size: 12pt;
     letter-spacing: 0.48px;
@@ -378,7 +426,6 @@ body{
     color: #39486d;
 }
 
-
 #on{
     display: none;
 }
@@ -386,42 +433,173 @@ body{
     display: none;
 }
 
+.cad-men{
+    /* background-color: brown; */
+    width: 376px;
+    position: absolute;
+    left: 5.7rem;
+    bottom: 0.97rem;
+}
+
+.btn-cad{
+    width: 305px;
+    height: 65px;
+    flex-grow: 0;
+    margin: 20px 0px 0 50px;
+    padding: 17.5px 81.1px 18.7px 86.6px;
+    border-radius: 40px;
+    background-color: #a1adc0;
+    outline: none;
+    border: none;
+    box-shadow: -10px 8px 0 0 #595d68;
+    font-family: KGRedHands;
+    font-size: 21px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.84px;
+    text-align: left;
+    color: rgba(255, 255, 255, 0.425);
+    pointer-events: none;
+}
+
+.btn-cad-on{
+    color: rgba(255, 255, 255, 0.85);
+    box-shadow: -10px 8px 0 0 #39486d;
+    background-color: #6188c1;
+    pointer-events: auto;
+}
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 1800px) {
+@media (max-width: 1900px) {
     .fundo{
-        margin: 38px 223px 0px 374px;
-        width: 884px;
+        margin: 38px 223px 0px 326px;
+        width: 978px;
         height: 698px;
         flex-grow: 0;
         padding: 57px 41.19999999999999px 61px 32px;
     }
     .fundo2 {
-        width: 373px;
+        width: 343px;
         height: 636px;
+        background-size:323% 101% ;
+    }
+    .cad_p{
+        margin: 75px 302.2px 42px -163px;
+        font-size: 44px;
+    }
+    .linha1{
+        left:-10.5rem;
+    }
+    .linha2{
+        left:-10.5rem;
+        top:4.9rem;
+    }
+    .nome{
+        width: 257.8px;
+        height: 57px;
+        padding: 0px 0 0 31.8px;
+        font-size: 15px;
+    }
+    .email{
+        width: 257.8px;
+        height: 57px;
+        padding: 0px 0 0 31.8px;
+        font-size: 15px;
+        left: 17.8rem;
+    }
+    .senha{
+        width: 257.8px;
+        height: 57px;
+        padding: 0px 0 0 31.8px;
+        font-size: 15px;
+    }
+    .olho{
+        font-size: 14pt;
+        top: 1.3rem;
+        left: 14rem;
+    }
+    .area{
+        width: 257.8px;
+        height: 57px;
+        padding: 0px 0 0 31.8px;
+        font-size: 15px;
+        left: 17.8rem;
+    }
+    #seta{
+        font-size: 20pt;
+        position: absolute;
+        top: 0.68rem;
+        left: 13rem;
+    }
+    .tos{
+        width: 476px;
+        left: -8rem;
+        top: 11.2rem; 
+    }
+    .check_b{
+        text-shadow: -1px 2px 0px rgb(28, 38, 63);
+        font-size: 16pt;
+    }
+    .check{
+        font-size: 10pt;
+        bottom: -1.15rem;
+    }
+    #tos span {
+        top: 0.2rem;
+        font-size: 10pt;
+    }
+    .cad-men{
+        left: -6.3rem;
+        bottom: 5.97rem;
+    }
+    .btn-cad{
+        padding: 13.5px 0 18.7px 75.6px;
+        width: 264px;
+        height: 52px;
+        font-size: 18px;
+    }
+    .lado-direito{
+        width: 50px;
+        height: 50px;
+        /* background-color: orange; */
+        position: relative;
+        left: 0rem;
+        top: -2.5rem;
+    }
+
+    .dp{
+        width: 210px;
+        height: 0px;
+        left: -0.99rem;
+        bottom: -3.5rem;
+    }
+    .dp-item{
+        font-size: 11pt;
+    }
+
+    .hov{
+        padding: 22px 16px 31px 27px;
+        width: 170px;
+        height: 32px;
+        margin-left: -2.8rem;
+    }
+
+    .log-men{
+            width: 296px;
+            height: 229px;
+            flex-grow: 0;
+            margin: 191px 0px 0px 5px;
+            padding: 46px 49px 46px;
+            border-radius: 33px;
+    }
+    .p-log{
+        font-size: 18px;
+    }
+    .btn-log{
+        margin-left: 3px;
     }
 
 }
