--- a/Artzy - Web/css/style-login.css
+++ b/Artzy - Web/css/style-login.css
@@ -17,11 +17,11 @@ body{
 }
 .fundo {
     display: flex;
-    width: 1241px;
+    width: 1141px;
     height: 838px;
     flex-grow: 0;
     margin: 70px auto;
-    padding: 61px 41.19999999999999px 61px 32px;
+    padding: 61px 9.2px 61px 32px;
     border-radius: 41px;
     border: solid 5px #000;
     background-color: rgba(255, 216, 194, 0.92);
@@ -29,7 +29,7 @@ body{
     position: relative;
 }
 .lado-esquerdo {
-    flex: 1; /* Ocupa todo o espaço disponível */
+    flex: 1; 
 }
 
 .lado-direito {
@@ -91,11 +91,10 @@ body{
 .Email {
     width: 446.8px;
     height: 63px;
-    padding: 24px 31.8px 23px 31.8px; /* Ajustado o padding */
+    padding: 2px 0 0 31.8px; 
     border-radius: 28px;
     border: solid 5px #000;
     background-color: #fff;
-    box-shadow: -10px 8px 0 0 #543838;
     outline: none;
     font-family: Papernotes;
     font-size: 18px;
@@ -112,11 +111,10 @@ body{
 .Senha{
     width: 446.8px;
     height: 63px;
-    padding: 24px 31.8px 23px 31.8px; /* Ajustado o padding */
+    padding: 2px 0 0 31.8px; 
     border-radius: 28px;
     border: solid 5px #000;
     background-color: #fff;
-    box-shadow: -10px 8px 0 0 #543838;
     outline: none;
     font-family: Papernotes;
     font-size: 18px;
@@ -138,12 +136,12 @@ body{
     width: 432px;
     /* background-color: aqua; */
     top: 29rem ;
-    left: 0.5rem ;
+    left: 0.3rem ;
 }
 .login{
 
     width: 138px;
-    height: 42px;
+    height: 52px;
     flex-grow: 0;
     margin: 0rem 0rem 0rem 3rem;
     padding: 10px 42px 12px 44px;
@@ -166,7 +164,7 @@ body{
 .cad{
 
     width: 153px;
-    height: 42px;
+    height: 52px;
     flex-grow: 0;
     margin: 0rem 0rem 0rem 15rem;
     padding: 11px 32px 12px 31px;
@@ -174,7 +172,7 @@ body{
     background-color: #ffc369;
     font-family: KGRedHands;
     border: none;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -188,7 +186,9 @@ body{
 }
 
 #oua{
-    margin: 0.5rem 0rem 0rem 12.8rem ;
+    font-family: KGRedHands;
+    font-size: 10pt;
+    margin: 1rem 0rem 0rem 12.8rem ;
     position: absolute;
     opacity: 70%
 }
@@ -199,6 +199,8 @@ body{
     margin: 43rem 0rem 0rem 25rem;
     position:absolute;
 }
+
+
 
 .miss_pass{
     height: 11px;
@@ -218,6 +220,55 @@ body{
     text-underline-offset: 2px;
     position: absolute;
 }
+
+input:focus {
+    transition: box-shadow 0.4s ease, transform 0.4s ease;
+    box-shadow: -10px 8px 0 0 #543838;
+
+    transform: translate(5px, -5px);
+}
+
+
+input:not(:focus)
+{
+    transition: box-shadow 0.4s ease, transform 0.4s ease;
+    box-shadow: 0px 0px 0px 0px #543838; /* Sombra inicial */
+    transform: translate(0px, 0px); /* Nenhuma transformação */
+
+}
+
+
+.login:hover{
+    transition: box-shadow 0.4s ease, transform 0.4s ease;
+    box-shadow: -10px 8px 0 0 #543838;
+    transform: translate(7px, -7px);
+}
+
+.login:not(:hover){
+    transition: box-shadow 0.4s ease, transform 0.4s ease;
+    box-shadow: 0px 0px 0 0 #ffc369;
+    transform: translate(0px, 0px);
+}
+
+.cad:hover{
+    transition: box-shadow 0.4s ease, transform 0.4s ease;
+    box-shadow: -10px 8px 0 0 #543838;
+    transform: translate(7px, -7px);
+}
+
+.cad:not(:hover){
+    transition: box-shadow 0.4s ease, transform 0.4s ease;
+    box-shadow: 0px 0px 0 0 #ffc369;
+    transform: translate(0px, 0px);
+}
+
+
+
+
+
+
+
+
 
 @media (max-width: 1800px) {
     .fundo{
@@ -268,17 +319,18 @@ body{
     }
     .login{
     
-        margin: 0rem 0rem 0rem 3rem;
-        padding: 10px 42px 12px 44px;
+        margin: 0rem 0rem 0rem 3.7rem;
+        padding: 10px 42px 12px 42px;
     }
     .cad{
     
-        margin: 0rem 0rem 0rem 15rem;
+        margin: 0rem 0rem 0rem 14.3rem;
         padding: 11px 32px 12px 31px;
     }
     
     #oua{
-        margin: 0.5rem 0rem 0rem 12.8rem ;
+        margin: 0.8rem 0rem 0rem 12.9rem;
+        font-size: 7pt;
     }
 
 }
