--- a/Artzy - Web/css/style.css
+++ b/Artzy - Web/css/style.css
@@ -1,3 +1,9 @@
-body{
-    background-color: #F5E7E1 ;
+#tela-cadastro{
+    display: none;
 }
+
+body{
+    background-color: #ecd9d1 ;
+}
+
+/* background-color: #E1EEF5 ; */
